# demo

./: .gitmodules  CMakeLists.txt
DM/: Base.cpp  Base.h  Bitflags.h  Log.cpp  Log.h  Traits.h  Types.h
Demo/: Buffer.cpp  Buffer.h  Config.h  Descriptor.cpp  Descriptor.h  FlyCamera.cpp  FlyCamera.h  Main.cpp  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RendererBase.cpp  RendererBase.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Window.cpp  Window.h
Demo/Common/: Base.cpp  Base.h  Bitflags.h  Log.cpp  Log.h  Traits.h  Types.h
Demo/Shaders/: common.glsl  demo.frag  fullscreen.frag  fullscreen.vert  mesh.frag  mesh.vert  random.glsl
Demo/Voxels/: DenseGrid.cpp  DenseGrid.h  Voxel.cpp  Voxel.h
